--- a/frontend/assets/css/dashboard.css
+++ b/frontend/assets/css/dashboard.css
@@ -2,7 +2,6 @@
 
 html {
 	box-sizing: border-box;
-	font-size: 16px;
 }
 
 *,
@@ -36,7 +35,7 @@ img {
 	height: auto;
 }
 
-/* style */
+/* style global */
 
 .top {
 	text-align: center;
@@ -63,6 +62,9 @@ nav {
 .main .row{
     margin-top: 20px;
 }
+
+/* dashboard.html*/
+
 
 .box{
     text-align: center;
