--- a/backend/dershane/dershane/Views/Shared/_Layout.cshtml
+++ b/backend/dershane/dershane/Views/Shared/_Layout.cshtml
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Add these script tags to include SweetAlert and jQuery -->
+
+
+
     <link rel="stylesheet" href="/css/skeleton.css">
+
     <link rel="stylesheet" href="/css/@ViewData["Style"]">
 </head>
 <body>
